# mpi4jax_ad_wrapper

./: LICENSE  README.md  pyproject.toml
src/mpi4jax_ad_wrapper/: __init__.py
